index-scheduler/src/snapshots/index_scheduler__tests__import_vectors-5.snap
---
source: index-scheduler/src/lib.rs
expression: fakerest_config.embedder_options
---
{
  "Rest": {
    "api_key": "My super secret",
    "distribution": null,
    "dimensions": 384,
    "url": "http://localhost:7777",
    "request": "{{text}}",
    "response": "{{embedding}}",
    "headers": {}
  }
}
