index-scheduler/src/snapshots/index_scheduler__tests__import_vectors-9.snap
---
source: index-scheduler/src/lib.rs
expression: doc
---
{
  "doggo": "Intel",
  "breed": "beagle",
  "_vectors": {
    "A_fakerest": {
      "embeddings": "[vector]",
      "userProvided": true
    },
    "noise": [
      0.1,
      0.2,
      0.3
    ]
  }
}
