index-scheduler/src/snapshots/index_scheduler__tests__settings_update-2.snap
---
source: index-scheduler/src/lib.rs
expression: task.details
---
{
  "embedders": {
    "default": {
      "source": "rest",
      "apiKey": "MyXXXX...",
      "url": "http://localhost:7777"
    }
  }
}
